--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,10 +15,11 @@ header{
     color: #fff;
     font-size:  1.8rem; 
     padding: 1rem;       
-    padding-top: 2rem;
     position: fixed;
     width: 100%;
-    height: 100px;
+    z-index: 1;
+    
+
 }
 footer{
     background: linear-gradient(to right, #0000CD, DeepSkyBlue);
@@ -43,14 +44,11 @@ footer{
     background-color: #fff;
     padding: 1.5rem;
     text-align: center;
-   margin-top: 4rem;
-   max-width: 70%;
-   padding-top: 3%;
-   margin-left: auto ;
-   margin-right: auto;
-   position: relative;
-   z-index: 1;
-   border-radius: 20px;
+    margin: 0 auto;
+    margin-top: 15rem;
+    max-width: 80%;
+    padding-top: 3%; 
+    border-radius: 20px;
    
 
 }
@@ -163,14 +161,11 @@ a{
     text-decoration: none;
     color: #fff;
     font-weight: bold;
-    background-color: rgb(40, 150, 40) ;
-    padding: 10px;
-    border-radius: 20px;
+    
 
     
 }
 a:hover{
     color: #000;
-    border:solid;
-    background-color: rgb(20, 200, 20);
+   
 }
