--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,7 +18,6 @@ header{
     position: fixed;
     width: 100%;
     z-index: 1;
-    
 
 }
 footer{
@@ -69,10 +68,15 @@ figure{
     text-align: center;
 }   
 .imagens-sites{
-    border-radius: 20px 20px 50px 20px;
+    border-radius: 5px;
     width: 20%;
     height: 5%;
-}   
+}  
+#logo-topo{
+    width: 7%;
+    height: 4%;
+    margin-left: 11rem;
+} 
 #estudante{
     border-radius: 100%;
     width: 10%;
