--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,10 +14,24 @@ header{
     background: linear-gradient(TO right, #0000CD, DeepSkyBlue );
     color: #fff;
     font-size:  1.8rem; 
-    padding: 1rem;       
+    padding: 0.5rem;       
     position: fixed;
     width: 100%;
     z-index: 1;
+
+}
+@media(min-width: 300px) and (max-width: 820px){
+    header{
+        background: linear-gradient(TO right, #0000CD, DeepSkyBlue );
+        color: #fff;
+        font-size:  1.6rem; 
+        text-align: center;
+        padding: 0.5rem;       
+        position: fixed;
+        width: 100%;
+        z-index: 1;
+    
+    }
 
 }
 footer{
@@ -38,7 +52,7 @@ footer{
    margin: 0 auto;
    max-width: 95%;
 }
-.conteudo-topo{
+.container{
     font-size: 1.6rem;
     background-color: #fff;
     padding: 1.5rem;
@@ -51,6 +65,24 @@ footer{
    
 
 }
+@media(min-width: 300px) and (max-width: 820px){
+    .container{
+        margin: 0 auto;
+        font-size: 1.6rem;
+        background-color: #fff;
+        padding: 1.5rem;
+        text-align: center;       
+        margin-top: 10rem;
+        max-width: 90%;
+        padding-top: 3%; 
+        border-radius: 20px;
+        margin-left: 1rem;
+        
+       
+    
+    }
+
+    }
 h1{
     font-size: 2.5rem;
 }
@@ -68,15 +100,29 @@ figure{
     text-align: center;
 }   
 .imagens-sites{
-    border-radius: 5px;
+    border-radius: 3px;
     width: 20%;
     height: 5%;
 }  
+@media(min-width: 300px) and (max-width: 820px){
+    .imagens-sites{
+    border-radius: 3px;
+    width: 90%;
+    height: 70%;
+}
+}
 #logo-topo{
     width: 7%;
     height: 4%;
-    margin-left: 11rem;
+    margin-left: 15rem;
 } 
+@media(min-width: 300px) and (max-width: 820px){
+    #logo-topo{
+        width: 15%;
+        height: 8%;
+        margin: 0 auto;
+    } 
+}
 #estudante{
     border-radius: 100%;
     width: 10%;
@@ -91,13 +137,7 @@ figure{
     }
 
 }
-@media(min-width: 280px) and (max-width: 820px){
-    .imagens-sites{
-    border-radius: 20px 20px 50px 2%;
-    width: 90%;
-    height: 70%;
-}
-}
+
 #compras{
     background-color: #ffff00;
     width: 150px;
@@ -160,7 +200,15 @@ nav{
     word-spacing: 10px ;
     margin-right: 5%;
     padding-bottom: 5px;
-}       
+}      
+@media(min-width: 300px) and (max-width: 820px){
+    nav{
+        text-align:  center;
+        font-size: 1.6rem;
+        word-spacing: 5px ;
+        padding-bottom: 1px;
+    }   
+} 
 a{
     text-decoration: none;
     color: #fff;
