add link whatsApp

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -62,6 +62,8 @@ footer{
     max-width: 80%;
     padding-top: 3%; 
     border-radius: 20px;
+    margin-left: 10%;
+    
    
 
 }
@@ -76,7 +78,9 @@ footer{
         max-width: 90%;
         padding-top: 3%; 
         border-radius: 20px;
-        margin-left: 1rem;
+        margin-left: 10%;
+       
+       
         
        
     
@@ -138,14 +142,16 @@ figure{
 
 }
 
-#compras{
-    background-color: #ffff00;
-    width: 150px;
-    height: 100px;
+#whats{
+    
+    width: 100px;
+    height: 170px;
     right: 0;
+    bottom: 0;
     position: fixed;
     text-align: center;
-    margin-top: 6rem;
+    z-index: 1;
+    margin-right: 5px;
    
 }
 #grid-conteudo{
