--- a/css/estilo.css
+++ b/css/estilo.css
@@ -140,8 +140,6 @@ figure{
 
 #whats{
     
-    width: 100px;
-    height: 170px;
     right: 0;
     bottom: 0;
     position: fixed;
@@ -150,6 +148,25 @@ figure{
     margin-right: 5px;
    
 }
+@media(min-width:300px) and (max-width: 820px ){
+    #whats{
+    
+        right: 0;
+        bottom: 0;
+        position: fixed;
+        text-align: center;
+        z-index: 1;
+        margin-right: 2px;
+       
+    }
+}
+@media(min-width:300px) and (max-width: 820px ){
+    .img-whats{
+        width: 70%;
+        height: 30%;
+    }
+}
+
 #grid-conteudo{
     background-color: #dcdcdc;
 }
