--- a/css/estilo.css
+++ b/css/estilo.css
@@ -52,6 +52,15 @@ footer{
    margin: 0 auto;
    max-width: 95%;
 }
+.conteudo-corpo{
+    font-size: 1.6rem;
+    background: linear-gradient(to right, #0000CD, DeepSkyBlue);
+    padding: 1.5rem;
+    text-align: justify;
+   margin: 0 auto;
+   max-width: 100%;
+   padding-top: 15rem;
+}
 .container{
     font-size: 1.6rem;
     background-color: #fff;
@@ -176,14 +185,33 @@ figure{
     grid-gap: 1px;
     max-width: 1200px;
     margin: 0 auto;
-
-
 }
 .grid div{
     background-color: #ffff;
     text-align: center;
     padding: 2px;
 }
+/*aqui inicia a cofigruacao de grids para o topo*/
+#grid-conteudo-corpo{
+    text-align: center;
+    border-radius: 20px;
+}
+.grid-corpo{
+    display: grid;
+    grid-template-columns: 480px 1fr;          
+    grid-gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    
+}
+.grid div#corpo{
+    text-align: center;
+    padding: 1px;
+    padding-bottom: 5px;
+    
+}
+/*aqui fim da cofigruacao de grids para o topo*/
+
 #formulario{
     background-color: #dcdcdc;
 }
