--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+/* aqui iniciamos a estruturas*/
 *{
     margin: 0;
     border: 0;
@@ -59,7 +60,7 @@ footer{
     text-align: justify;
    margin: 0 auto;
    max-width: 100%;
-   padding-top: 15rem;
+   padding-top: 20rem;
 }
 .container{
     font-size: 1.6rem;
@@ -92,6 +93,7 @@ footer{
     }
 
     }
+/*aqui iniciamos as fontes do site*/
 h1{
     font-size: 2.5rem;
 }
@@ -108,6 +110,7 @@ h4{
 figure{
     text-align: center;
 }   
+/*controles de imagens*/
 .imagens-sites{
     border-radius: 3px;
     width: 20%;
@@ -119,6 +122,10 @@ figure{
     width: 90%;
     height: 70%;
 }
+}
+.imagens-corpo{
+    width: 95%;
+    height: 80%;
 }
 #logo-topo{
     width: 10%;
@@ -175,6 +182,7 @@ figure{
         height: 30%;
     }
 }
+/*Controles de grids*/
 
 #grid-conteudo{
     background-color: #dcdcdc;
@@ -202,6 +210,20 @@ figure{
     grid-gap: 20px;
     max-width: 1200px;
     margin: 0 auto;
+    color: #fff;
+    text-shadow: 1px 1px #000;
+    
+}
+@media (min-width: 300px) and (max-width: 820px ) {
+    .grid-corpo{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));            
+        grid-gap: 1px;
+        max-width: 1200px;
+        margin: 0 auto;
+        color: #fff;
+        text-shadow: 1px 1px #000;
+    }
     
 }
 .grid div#corpo{
