--- a/css/estilo.css
+++ b/css/estilo.css
@@ -62,17 +62,29 @@ footer{
    max-width: 100%;
    padding-top: 20rem;
 }
+@media(min-width: 300px) and (max-width: 820px){
+    .conteudo-corpo{
+        font-size: 1.6rem;
+        background: linear-gradient(to right, #0000CD, DeepSkyBlue);
+        padding: 1.5rem;
+        text-align: justify;
+       margin: 0 auto;
+       max-width: 100%;
+       padding-top: 16rem;
+    }
+
+}
 .container{
     font-size: 1.6rem;
     background-color: #fff;
     padding: 1.5rem;
     text-align: center;
     margin: 0 auto;
-    margin-top: 20rem;
+    margin-top: 4rem;
     max-width: 80%;
-    padding-top: 3%; 
+    padding-top: 3rem; 
     border-radius: 20px;
-    margin-left: 10%;
+   
     
    
 
@@ -84,7 +96,7 @@ footer{
         background-color: #fff;
         padding: 1.5rem;
         text-align: center;       
-        margin-top: 12rem;
+        margin-top: 2rem;
         max-width: 90%;
         padding-top: 3%; 
         border-radius: 20px;
@@ -99,6 +111,9 @@ h1{
 }
 h2{
     font-size: 1.9rem;
+}
+h2#title-topo{
+    font-size: 2rem;
 }
 
 h3{
