inserting content at the top

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -19,6 +19,7 @@ header{
     position: fixed;
     width: 100%;
     z-index: 1;
+   
 
 }
 @media(min-width: 300px) and (max-width: 820px){
@@ -58,9 +59,9 @@ footer{
     background: linear-gradient(to right, #0000CD, DeepSkyBlue);
     padding: 1.5rem;
     text-align: justify;
-   margin: 0 auto;
-   max-width: 100%;
-   padding-top: 20rem;
+    max-width: 100%;
+    padding-top: 16rem;
+    margin: 0 auto;
 }
 @media(min-width: 300px) and (max-width: 820px){
     .conteudo-corpo{
@@ -111,6 +112,8 @@ h1{
 }
 h2{
     font-size: 1.9rem;
+    text-align: center;
+    
 }
 h2#title-topo{
     font-size: 2rem;
@@ -218,6 +221,7 @@ figure{
 #grid-conteudo-corpo{
     text-align: center;
     border-radius: 20px;
+   
 }
 .grid-corpo{
     display: grid;
@@ -230,14 +234,16 @@ figure{
     
 }
 @media (min-width: 300px) and (max-width: 820px ) {
-    .grid-corpo{
+    .grid-corpo{      
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));            
         grid-gap: 1px;
-        max-width: 1200px;
-        margin: 0 auto;
+        max-width: 1200px;     
         color: #fff;
         text-shadow: 1px 1px #000;
+        margin: 0 auto;
+        
+        
     }
     
 }
@@ -321,5 +327,10 @@ a{
     
 
     }
+}
+li{
+    text-align: left;
+    font-weight: bold;
+    margin-left: 3rem ;
 }
 
